Post type filtering

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
    
     "name": "9GAG Lite",
     "version": "0.1.0",
-    "description": "9Gag ad blocking and personalization",
+    "description": "Change 9gag as you want to work like it should",
 
     "icons": {
       "16": "assets/icon16.png",
