--- a/manifest.json
+++ b/manifest.json
@@ -22,12 +22,15 @@
     },
    
     "content_scripts": [{
-      "js": [ "globals.js", "scripts/setup.js" ],
+      "js": [ "globals.js", "options/defaults.js", "scripts/setup.js" ],
       "run_at": "document_start",
       "matches": [ "*://*.9gag.com/*" ]
     }, {
       "js": [ "scripts/content.js" ],
       "run_at": "document_end",
+      "matches": [ "*://*.9gag.com/*" ]
+    }, {
+      "js": [ "scripts/fixup.js" ],
       "matches": [ "*://*.9gag.com/*" ]
     }],
 
