--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
     },
    
     "content_scripts": [{
-      "js": [ "globals.js", "options/defaults.js", "scripts/setup.js" ],
+      "js": [ "globals.js", "scripts/setup.js" ],
       "run_at": "document_start",
       "matches": [ "*://*.9gag.com/*" ]
     }, {
